GL 修改计划信息 20101102

--- a/www/partials/addpatient/plan/create.html
+++ b/www/partials/addpatient/plan/create.html
@@ -1,12 +1,14 @@
 <ion-view view-title="计划列表">
 	<ion-nav-buttons side="primary">
-		<button class="button icon-left ion-chevron-left button-clear button-white" ng-click="$ionicGoBack()">
+		<button class="button icon-left ion-chevron-left button-clear button-white" ng-click="$onClickBackward()">
 		</button>
 	</ion-nav-buttons>
 	<ion-nav-buttons side="secondary">
-		<button class="button icon-right" ng-click="CreatePlan()" disabled = "{{create.AddFlag}}">
-			<i class="icon ion-plus"></i>
-		</button>
+		<div class="markDisplay{{create.AddFlag}}">
+			<button class="button icon-right" ng-click="CreatePlan()">
+				<i class="icon ion-plus"></i>
+			</button>
+		</div>
 	</ion-nav-buttons>
 	<ion-content>
 		<div class="list">
@@ -15,7 +17,7 @@
 	        </a>
     	</div>
     	<div style="text-align:center;padding:20px;">
-			<button class="button button-outline button-positive" style="width:60px;height:30px;" ng-click="$ionicGoBack()">
+			<button class="button button-outline button-positive" style="width:60px;height:30px;" ng-click="$onClickBackward()">
 			<span style="font-size:15px;color:blue;font-weight:bold">确定</span>
 			</button>
 		</div>
