--- a/www/partials/addpatient/plan/food.html
+++ b/www/partials/addpatient/plan/food.html
@@ -1,6 +1,6 @@
 <ion-view view-title="建议饮食结构">
 	<ion-nav-buttons side="primary">
-		<button class="button icon-left ion-chevron-left button-clear button-white" ng-click="$ionicGoBack()">
+		<button class="button icon-left ion-chevron-left button-clear button-white" ng-click="onClickBackward()">
 		</button>
 	</ion-nav-buttons>
 	<ion-content>
