--- a/www/partials/addpatient/plan/personal.html
+++ b/www/partials/addpatient/plan/personal.html
@@ -1,4 +1,4 @@
-<ion-view view-title="其他">
+<ion-view view-title="个性化定制">
 	<ion-nav-buttons side="primary">
 		<button class="button icon-left ion-chevron-left button-clear button-white" ng-click="onClickBackward()">
 		</button>
