--- a/www/partials/addpatient/plan/taskList.html
+++ b/www/partials/addpatient/plan/taskList.html
@@ -1,7 +1,7 @@
 <ion-view view-title="计划设定">
 	<ion-nav-buttons side="primary">
-		<button class="button icon-left ion-chevron-left button-clear button-white" href="#/addpatient/create">
-		</button>
+		<a class="button icon-left ion-chevron-left button-clear button-white" href="#/addpatient/create">
+		</a>
 	</ion-nav-buttons>
 	
 	<ion-content>	
@@ -51,10 +51,10 @@
 	        </a>       
         </div>			
 						
-		<!-- <div style="text-align:center;padding:20px;">
-			<button class="button button-outline button-positive" style="width:100px;height:30px;" ng-click="StartPlan()">
-			<span style="font-size:15px;color:blue;font-weight:bold">开始计划</span>
+		<div style="text-align:center;padding:20px;">
+			<button class="button button-outline button-positive" style="width:100px;height:30px;" ng-click="onClickBackward()">
+			<span style="font-size:15px;color:blue;font-weight:bold">确定</span>
 			</button>
-		</div>	 -->				
+		</div>					
 	</ion-content>
 </ion-view>
