--- a/www/partials/addpatient/plan/weight.html
+++ b/www/partials/addpatient/plan/weight.html
@@ -1,11 +1,11 @@
 <ion-view view-title="{{task.Title}}">
 	<ion-nav-buttons side="primary">
-		<button class="button icon-left ion-chevron-left button-clear button-white" ng-click="$ionicGoBack()">
+		<button class="button icon-left ion-chevron-left button-clear button-white" ng-click="onClickBackward()">
 		</button>
 	</ion-nav-buttons>
 
 	<ion-content>
-		<ion-checkbox ng-model = "task.Check" ng-repeat = "item in task.list">
+		<ion-checkbox ng-model = "item.ControlType" ng-repeat = "item in task.list">
         {{item.Name}}
         </ion-checkbox>
 		<div style="text-align:center;padding:20px;">
