--- a/www/partials/addpatient/ModuleInfoList.html
+++ b/www/partials/addpatient/ModuleInfoList.html
@@ -1,9 +1,9 @@
 <ion-view title="慢病信息">
-<ion-header-bar>
+<!-- <ion-header-bar>
     <a class="button icon-left ion-chevron-left button-clear button-dark" ng-click="onClickBackward1()"></a>
-    <h2 class="title">慢病信息</h2>
+    <h2 class="title">慢病信息</h2> -->
     <!-- <a class="button icon-right ion-chevron-right button-clear button-dark" ng-click="onClickForward()"></a>-->
-</ion-header-bar>
+<!-- </ion-header-bar> -->
 
 
 
@@ -19,6 +19,9 @@
         </ion-item>
       </div>
     </ion-list>
+  </div>
+  <div>
+    <button class="button button-block button-positive" ng-click="onClickBackward1()">完成</button>
   </div>
   </ion-content>
 </ion-view>
