登录的页面替换修改过，测过。 coach-config.html的退出可用了，改了相应的controller 删除了没用的register.html 改了列表的页面+controller
service的basicurl改成了121.43.107.106

Data.Users加了一个Roles，改了GetPatientsList,都是我自己用的

--- a/www/partials/individual/coach-config.html
+++ b/www/partials/individual/coach-config.html
@@ -16,7 +16,7 @@
 		
 		
 		<button class="button " ng-click="onClickChangePassword()">修改密码</button>
-		<button class="button " ng-click="onClickChangePassword()">退出登录</button>
+		<button class="button " ng-click="onClickSignOut()">退出登录</button>
 		
   </ion-content>
 </ion-view>
