--- a/www/partials/login/phonevalid.html
+++ b/www/partials/login/phonevalid.html
@@ -3,6 +3,7 @@
           <ion-nav-back-button class="button-icon ion-arrow-left-c">
           </ion-nav-back-button>
         </ion-nav-bar>
+        <div  style="position: absolute;top: 43px;z-index:100;display: block;height: 3px;background-color: #33cd5f;{{barwidth}}" ></div>
         <ion-content padding="true" >
 				<div class="list list-inset">
           <label class="item item-input">
@@ -11,9 +12,6 @@
           <label class="item item-input">
             <input type="text" placeholder="输入验证码" ng-model="verifyCode">
           </label>
-
-
-
           <span style="color:white">00</span><span style="color:#c55e19">{{logStatus}}</span>
           <button class="button button-block button-stable" ng-disabled="isable"  ng-click = "getcode(veriusername)">
             {{veritext}}
