--- a/www/partials/login/signin.html
+++ b/www/partials/login/signin.html
@@ -2,10 +2,8 @@
   <ion-nav-bar class="bar-dark nav-title-slide-ios7" style="" >
      
   </ion-nav-bar>
+  <div  style="position: absolute;top: 43px;z-index:100;display: block;height: 2.5px;background-color: #ef473a;{{barwidth}}" ></div>
   <ion-content padding="true"  style=" padding-left:10%;padding-right:10%;background : -webkit-linear-gradient(bottom, rgb(101, 98, 160) 00%, rgb(0, 0, 0) 99%);">
-   <!--  <div class="row" >
-      <div class="col text-center" >
-        <div style="max-width:500px"> -->
           <div class="row text-center" style="min-height:200px">
             
           </div>
@@ -24,11 +22,7 @@
             <div class="col "><p style="color:#9999cc;text-align:right" ng-click="toReset()">忘记密码</p></div>
           </div>
 
-          <button style="margin-top:0" class="button button-block button-assertive" ng-click="signIn(logOn)">立即登录</button>
-  <!--       </div>
-      </div>
-    </div> -->
-           
+          <button style="margin-top:0" class="button button-block button-assertive" ng-click="signIn(logOn)">立即登录</button>          
   </ion-content>
           
   <div  class="text-center hide-on-keyboard-open" style="position:absolute;bottom:0px;width:100%;min-height:10%">
