--- a/www/partials/login/userDetail.html
+++ b/www/partials/login/userDetail.html
@@ -3,6 +3,7 @@
     <ion-nav-back-button class="button-icon ion-arrow-left-c">
     </ion-nav-back-button>
   </ion-nav-bar>
+  <div  style="position: absolute;top: 43px;z-index:100;display: block;height: 3px;background-color: #33cd5f;{{barwidth}}" ></div>
   <ion-content padding="true" >
     
     <div  class="list">
