--- a/www/partials/login/phonevalid.html
+++ b/www/partials/login/phonevalid.html
@@ -7,7 +7,7 @@
         <ion-content padding="true" >
 				<div class="list list-inset">
           <label class="item item-input">
-            <input type="text" placeholder="手机号" ng-model="veriusername">
+            <input type="tel" placeholder="手机号" ng-model="veriusername">
           </label>
           <label class="item item-input">
             <input type="text" placeholder="输入验证码" ng-model="verifyCode">
