--- a/www/partials/managepatient/main.html
+++ b/www/partials/managepatient/main.html
@@ -23,23 +23,23 @@
 
 
 <ion-tabs class="tabs-dark tabs-icon-top">
-<ion-tab title="计划情况"  icon="ion-stats-bars " href="#/tab/plan">
+<ion-tab title="计划情况"  icon="ion-stats-bars " href="#/manage/plan">
 <ion-nav-view name="plan-tab"></ion-nav-view>
 </ion-tab>
 
-<ion-tab title="临床信息" icon="ion-document-text "  href="#/tab/clinic" >
+<ion-tab title="临床信息" icon="ion-document-text "  href="#/manage/clinic" >
 <ion-nav-view name="clinic-tab"></ion-nav-view>
 </ion-tab>
 
-<ion-tab title="慢病信息" icon="ion-ios-barcode"  href="#/tab/vital">
-<ion-nav-view name="vital-tab"></ion-nav-view>
+<ion-tab title="慢病信息" icon="ion-ios-barcode"  href="#/manage/ModuleInfo">
+<ion-nav-view name="ModuleInfo"></ion-nav-view>
 </ion-tab>
 
-<ion-tab title="计划调整" icon="ion-ios-loop-strong "  href="#/tab/change">
-<ion-nav-view name="change-tab"></ion-nav-view>
+<ion-tab title="计划调整" icon="ion-ios-loop-strong "  href="#/manage/create">
+<ion-nav-view name="changeplan"></ion-nav-view>
 </ion-tab>
 
-<ion-tab title="消息发送" icon="ion-ios-chatbubble"  href="#/tab/message">
+<ion-tab title="消息发送" icon="ion-ios-chatbubble"  href="#/manage/message">
 <ion-nav-view name="message-tab"></ion-nav-view>
 </ion-tab>
 </ion-tabs>
