--- a/www/partials/managepatient/main.html
+++ b/www/partials/managepatient/main.html
@@ -40,7 +40,7 @@
 </ion-tab>
 
 <ion-tab title="消息发送" icon="ion-ios-chatbubble"  href="#/manage/message">
-<ion-nav-view name="message-tab"></ion-nav-view>
+<ion-nav-view name="message"></ion-nav-view>
 </ion-tab>
 </ion-tabs>
 
