患者管理流程页面跳转修改
Signed-off-by: SimonTDY <584530365@qq.com>

--- a/www/partials/managepatient/plan.html
+++ b/www/partials/managepatient/plan.html
@@ -4,9 +4,9 @@
 
 <div>
   <div class="button-bar ">
-   <a class="button"  href="#/tab/plan/tablegraph">依从率图</a>
+   <a class="button"  href="#/manage/plan/tablegraph">依从率图</a>
    <a class="button"  href="#/Independent/table/tablelist" ng-click="showvitalsigns()"> 体征表</a> 
-   <a class="button"  href="#/Independent/asspic" >风险评估</a>
+   <a class="button"  href="#/Independent/risk" >风险评估</a>
  </div>
 <!-- ng-change="changeplan()" -->
 
