--- a/www/partials/managepatient/table.html
+++ b/www/partials/managepatient/table.html
@@ -25,23 +25,23 @@
 
 
 <ion-tabs class="tabs-dark tabs-icon-top">
-<ion-tab title="计划情况"  icon="ion-stats-bars " href="#/tab/plan">
+<ion-tab title="计划情况"  icon="ion-stats-bars " href="#/manage/plan">
 
 </ion-tab>
 
-<ion-tab title="临床信息" icon="ion-document-text "  href="#/tab/clinic" >
+<ion-tab title="临床信息" icon="ion-document-text "  href="#/manage/clinic" >
 
 </ion-tab>
 
-<ion-tab title="慢病信息" icon="ion-ios-barcode"  href="#/tab/vital">
+<ion-tab title="慢病信息" icon="ion-ios-barcode"  href="#/manage/ModuleInfo">
 
 </ion-tab>
 
-<ion-tab title="计划调整" icon="ion-ios-loop-strong "  href="#/tab/change">
+<ion-tab title="计划调整" icon="ion-ios-loop-strong "  href="#/manage/create">
 
 </ion-tab>
 
-<ion-tab title="消息发送" icon="ion-ios-chatbubble"  href="#/tab/message">
+<ion-tab title="消息发送" icon="ion-ios-chatbubble"  href="#/manage/message">
 
 </ion-tab>
 </ion-tabs>
