--- a/www/partials/managepatient/tablelist.html
+++ b/www/partials/managepatient/tablelist.html
@@ -19,9 +19,9 @@
 </style>
 <div>
   <div class="button-bar ">
-   <a class="button"  href="#/tab/plan" >依从率图</a>
+   <a class="button"  href="#/manage/plan" >依从率图</a>
    <a class="button"  href="#/Independent/table" ng-click="showvitalsigns()"> 体征表</a> 
-   <a class="button"  href="#/Independent/asspic" >风险评估</a>
+   <a class="button"  href="#/Independent/risk" >风险评估</a>
  </div>
 
 <!-- dayepicker -->
