患者管理页面跳转修改
Signed-off-by: SimonTDY <584530365@qq.com>

--- a/www/partials/addpatient/plan/taskList.html
+++ b/www/partials/addpatient/plan/taskList.html
@@ -1,6 +1,6 @@
 <ion-view view-title="计划设定">
 	<ion-nav-buttons side="primary">
-		<a class="button icon-left ion-chevron-left button-clear button-white" href="#/addpatient/create">
+		<a class="button icon-left ion-chevron-left button-clear button-white" ng-onclick="onClickBackward()">
 		</a>
 	</ion-nav-buttons>
 	
