--- a/www/partials/managepatient/ModuleInfo.html
+++ b/www/partials/managepatient/ModuleInfo.html
@@ -13,7 +13,7 @@
       <ion-list>
         <div collection-repeat='Module in ModuleInfo'>
           <ion-item href="#/manage/ModuleInfo/{{Module.ModuleCode}}">
-            <a class="item item-icon-right" href="#/addpatient/ModuleInfo/{{Module.ModuleCode}}">{{Module.ModuleName}}</a>
+            <a class="item item-icon-right" href="#/manage/ModuleInfo/{{Module.ModuleCode}}">{{Module.ModuleName}}</a>
           </ion-item>
         </div>
       </ion-list>
