--- a/www/partials/managepatient/main.html
+++ b/www/partials/managepatient/main.html
@@ -6,7 +6,7 @@
 </div>
 <h1 class="title">患者管理</h1>
 <div class="buttons">
-  <button class="button">Right Button</button>
+  <button class="button icon-right ion-android-home" href="#/coach/patients"></button>
 </div>
 </ion-header-bar>
 <ion-header-bar class="bar-subheader bar-stable">
