--- a/www/partials/managepatient/plan.html
+++ b/www/partials/managepatient/plan.html
@@ -4,8 +4,8 @@
 
 <div>
   <div class="button-bar ">
-   <a class="button"  href="#/manage/plan/tablegraph">依从率图</a>
-   <a class="button"  href="#/Independent/table/tablelist" ng-click="showvitalsigns()"> 体征表</a> 
+   <a class="button"  >依从率图</a>
+   <a class="button"  href="#/Independent/table/tablelist"> 体征表</a> 
    <a class="button"  href="#/Independent/risk" >风险评估</a>
  </div>
 <!-- ng-change="changeplan()" -->
