--- a/www/partials/managepatient/risk.html
+++ b/www/partials/managepatient/risk.html
@@ -43,7 +43,7 @@
       collection-repeat ="item in newRisks | filter: query " 
       class ="item-thumbnail-left
       item-icon-right 
-      item-text-wrap"  href="#/addpatient/risk/{{item.num}}" >
+      item-text-wrap"  href="#/Independent/risk/{{item.num}}" >
       <!-- 改动url -->
       <img src="http://placehold.it/300/CCE8D6?text={{item.num}}"
         alt="{{ item.SortNo }} Photo">
@@ -82,7 +82,7 @@
   		
       </ion-item>
   	</ion-list>
-    <button ng-click="NextPage()" class="button button-block button-positive">下一步</button>
+    <button ng-click="BacktoManage()" class="button button-block button-positive">完成</button>
   </ion-content>
 </ion-pane>
 </ion-view>
