跳转患者管理中风险评估页面的跳转
Signed-off-by: SimonTDY <584530365@qq.com>

--- a/www/partials/managepatient/risk.html
+++ b/www/partials/managepatient/risk.html
@@ -5,7 +5,7 @@
   <div class="h1 title">风险评估</div>    
   <button class="button button-icon ion-minus-circled" ng-click="data.showDelete = !data.showDelete; showReorder = false;">
   </button>
-  <button class="button button-icon ion-help-circled" ng-click="onClickEvaluation()">
+  <button class="button button-icon ion-help-circled" ng-click="onClickEvaluation1()">
     新增
   </button>
 </ion-header-bar>
