--- a/www/partials/managepatient/riskdetail.html
+++ b/www/partials/managepatient/riskdetail.html
@@ -19,7 +19,7 @@
 <ion-view view-title="风险评估" hide-nav-bar="true">
 
 <ion-header-bar >
-  <button class="button button-icon icon ion-arrow-left-a" ng-click="onClickBackward()">返回</button>
+  <button class="button button-icon icon ion-arrow-left-a" ng-click="onClickBackward1()">返回</button>
   <div class="h1 title">风险评估</div>
 </ion-header-bar>
 
