--- a/www/partials/managepatient/riskquestion.html
+++ b/www/partials/managepatient/riskquestion.html
@@ -27,12 +27,12 @@
       <div class = "row">
         <div class ="col col-50">
           <div class = "padding">
-            <button class="button button-block button-primary" ng-click="clickCancel()">取消</button>
+            <button class="button button-block button-primary" ng-click="clickCancel1()">取消</button>
           </div>
         </div>
         <div class = "col col-50">
           <div class="padding">
-          <button class="button button-block button-primary" ng-click="clickSubmit()">提交信息</button>
+          <button class="button button-block button-primary" ng-click="clickSubmit1()">提交信息</button>
         </div>
         </div>
       </div>
