计划任务中的患者ID更改为从LocalStorage获取
Signed-off-by: SimonTDY <584530365@qq.com>

--- a/www/partials/managepatient/ModuleInfoList.html
+++ b/www/partials/managepatient/ModuleInfoList.html
@@ -13,7 +13,7 @@
       <ion-list>
       <div ng-repeat='Module in ModuleInfoList'>
         <ion-item ng-href="#/manage/ModuleInfo/{{Module.CategoryCode}}/{{Module.ItemCode}}"  ng-if="Module.ItemCode.indexOf('0000') > -1">
-          <a class="item item-icon-right">{{Module.ItemName}}<!-- <div class="markDisplay dflag[$index].Flag">
+          <a class="item item-icon-right" ng-href="#/manage/ModuleInfo/{{Module.CategoryCode}}/{{Module.ItemCode}}">{{Module.ItemName}}<!-- <div class="markDisplay dflag[$index].Flag">
             <i class="icon ion-ios-checkmark-empty"></i>
           </div> --></a>
         </ion-item>
