--- a/www/partials/managepatient/plan/taskList.html
+++ b/www/partials/managepatient/plan/taskList.html
@@ -51,10 +51,10 @@
 	        </a>       
         </div>			
 						
-		<div style="text-align:center;padding:20px;">
+		<!-- <div style="text-align:center;padding:20px;">
 			<button class="button button-outline button-positive" style="width:100px;height:30px;" ng-click="onClickBackward()">
 			<span style="font-size:15px;color:blue;font-weight:bold">确定</span>
 			</button>
-		</div>					
+		</div> -->					
 	</ion-content>
 </ion-view>
