--- a/www/partials/addpatient/plan/healthEducation.html
+++ b/www/partials/addpatient/plan/healthEducation.html
@@ -1,6 +1,6 @@
 <ion-view view-title="健康教育">
 	<ion-nav-buttons side="primary">
-		<button class="button icon-left ion-chevron-left button-clear button-white" ng-click="Confirm()">
+		<button class="button icon-left ion-chevron-left button-clear button-white" ng-click="onClickBackward()">
 		</button>
 	</ion-nav-buttons>
 	<ion-content>
@@ -14,7 +14,7 @@
         </div>
 
         <div style="text-align:center;padding:20px;">
-			<button class="button button-outline button-positive" style="width:60px;height:30px;" ng-click="Confirm()">
+			<button class="button button-outline button-positive" style="width:60px;height:30px;" ng-click="onClickBackward()">
 			<span style="font-size:15px;color:blue;font-weight:bold">确定</span>
 			</button>
 		</div>		
