--- a/www/partials/managepatient/main.html
+++ b/www/partials/managepatient/main.html
@@ -39,8 +39,8 @@
 <ion-nav-view name="changeplan"></ion-nav-view>
 </ion-tab>
 
-<ion-tab title="消息发送" icon="ion-ios-chatbubble"  href="#/manage/message">
-<ion-nav-view name="message"></ion-nav-view>
+<ion-tab title="消息发送" icon="ion-ios-chatbubble"  href="#/manage/chat">
+<ion-nav-view name="chat"></ion-nav-view>
 </ion-tab>
 </ion-tabs>
 
