LRZ风险评估页面修改-新建患者流程已完成，患者管理部分还未修改
ZXF修改了部分代码，未测试


Signed-off-by: SimonTDY <584530365@qq.com>

--- a/www/partials/addpatient/riskdetail.html
+++ b/www/partials/addpatient/riskdetail.html
@@ -57,7 +57,7 @@
   </div>
 </div>
 
-<ion-slide-box on-slide-changed="slideHasChanged($index)"  ng-repeat ="item in newRisks | filter:{ num : whichone} ">
+<ion-slide-box on-slide-changed="slideHasChanged($index)"  ng-repeat ="item in newRisks | filter:{ num : whichone} "  delegate-handle="my-handle">
   <ion-slide>
     <div>
   <div class="card" >
