--- a/www/partials/individual/coach-config.html
+++ b/www/partials/individual/coach-config.html
@@ -13,10 +13,20 @@
 	</ion-nav-bar>
 
 <ion-content>
-		
-		
-		<button class="button " ng-click="onClickChangePassword()">修改密码</button>
-		<button class="button " ng-click="onClickSignOut()">退出登录</button>
+	<div class ="padding">
+
+	
+		<button class="button button-block button-primary" ng-click="onClickChangePassword()">
+		  修改密码
+		</button>
+	</div>	
+	
+	<div class ="padding">
+		<button class="button button-block button-assertive" ng-click="onClickSignOut()">
+		  退出登录
+		</button>	
+
+	</div>	
 		
   </ion-content>
 </ion-view>
