--- a/www/partials/individual/coach-home.html
+++ b/www/partials/individual/coach-home.html
@@ -1,4 +1,4 @@
-<ion-view view-title = "健康专员主页  ({{state}}) "  >
+<ion-view view-title = "健康专员主页 "  >
 
 <!--   <ion-header-bar >
     <button class="button button-icon icon ion-qr-scanner">扫一扫</button>
@@ -76,9 +76,9 @@
       个人信息
     </span>
 
-    <span class="button button-block button-clear icon ion-ios-calendar" ng-click="onClickPersonalSchedule()" href='#/schedule'>
+<!--     <span class="button button-block button-clear icon ion-ios-calendar" ng-click="onClickPersonalSchedule()" href='#/schedule'>
       我的日程
-    </span>
+    </span> -->
 
     <span class="button button-block button-clear icon ion-gear-a" ng-click="onClickPersonalConfig()">
       设置
