--- a/www/partials/managepatient/clinic.html
+++ b/www/partials/managepatient/clinic.html
@@ -2,8 +2,7 @@
 <ion-content class="padding">
 <div class="row">
 	<div class="col">
-		<div class="item item-select">
-			医院 
+		<div class="item item-select"> 
 			<select>
 				<option selected>海军总医院</option>
 			</select>
@@ -22,7 +21,7 @@
 
 <div class="row">
 	<div class="row">
-	<div class="col ">
+	<div class="col col-80">
 
 		<ionic-datepicker input-obj="datepickerObject"class="col col=80 " >
 		<button class="button button-block button-positive" >起始日期{{tt}}</button>
