--- a/www/partials/managepatient/table.html
+++ b/www/partials/managepatient/table.html
@@ -10,7 +10,7 @@
 <ion-header-bar class="bar-subheader bar-stable">
 <label class="item item-input item-select">
   <div >
-    <h2>患者姓名：{{Name}}      性别：{{gender}}        年龄：{{age}}</h2>
+    <h2>{{Name}}      {{gender}}        {{age}}岁</h2>
   </div>
   <select>
     <option selected>高血压模块</option>
