--- a/www/partials/addpatient/clinicinfo.html
+++ b/www/partials/addpatient/clinicinfo.html
@@ -28,7 +28,7 @@
 
 <div class="row">
 	<div class="row">
-	<div class="col ">
+	<div class="col col-80">
 
 		<ionic-datepicker input-obj="datepickerObject"class="col col=80 " >
 		<button class="button button-block button-positive" >起始日期{{tt}}</button>
