--- a/www/partials/addpatient/risk.html
+++ b/www/partials/addpatient/risk.html
@@ -43,19 +43,19 @@
       collection-repeat ="item in newRisks | filter: query " 
       class ="item-thumbnail-left
       item-icon-right 
-      item-text-wrap"  href="#/addpatient/risk/{{item.num}}" >
+      item-text-wrap"  href="#/addpatient/risk/{{item.num}}" ng-hide = " (!item.M1show)&& (!item.M2show) ">
       <!-- 改动url -->
       <img src="http://placehold.it/300/CCE8D6?text={{item.num}}"
         alt="{{ item.SortNo }} Photo">
 <!--   		<h2>{{item.SortNo}}</h2> -->
       <div class="row">
-        <div class="col">
+        <div class="col" ng-show =" item.M1show ">
             <h2>{{item.M1.AssessmentName}}</h2>
             <h3>{{item.M1.AssessmentTime}}</h3>
             <h4>{{item.M1.SBP}} / {{item.M1.DBP}} mmHg </h4>
             <!-- <p> {{item.M1.Result | limitTo: 10  }}  {{ patient.bio.length > 10 ? '&hellip;' : '' }} </p> -->
         </div>
-    		<div class="col">
+    		<div class="col" ng-show =" item.M2show">
             <h2>{{item.M2.AssessmentName}}</h2>
             <h3>{{item.M2.AssessmentTime}}</h3>
             <h4>{{item.M2.Period}} : {{item.M2.Glucose}} mmol/L </h4>
