完善新建患者的基本信息录入功能
Signed-off-by: SimonTDY <584530365@qq.com>

--- a/www/partials/addpatient/basicinfo.html
+++ b/www/partials/addpatient/basicinfo.html
@@ -64,7 +64,7 @@
 			<div class='row responsive-sm'>
 				<div class='col'>	
 					<label class="item item-input">
-						*姓名：<input type="text" placeholder="张三" ng-model="users.UserName">
+						*姓名：<input type="text" placeholder="" ng-model="users.UserName">
 					</label>
 				</div>
 				<div class='col'>
