修改患者管理流程中的风险评估页面跳转功能
Signed-off-by: SimonTDY <584530365@qq.com>

--- a/www/partials/managepatient/riskquestion.html
+++ b/www/partials/managepatient/riskquestion.html
@@ -32,7 +32,7 @@
         </div>
         <div class = "col col-50">
           <div class="padding">
-          <button class="button button-block button-primary" ng-click="clickSubmit1()">提交信息</button>
+          <button class="button button-block button-primary" ng-click="clickSubmit()">提交信息</button>
         </div>
         </div>
       </div>
