Signed-off-by: SimonTDY <584530365@qq.com>

--- a/www/partials/managepatient/risk.html
+++ b/www/partials/managepatient/risk.html
@@ -82,6 +82,7 @@
   		
       </ion-item>
   	</ion-list>
+    <button ng-click="BacktoManage()" class="button button-block button-positive">完成</button>
   </ion-content>
 </ion-pane>
 </ion-view>
