--- a/www/partials/managepatient/risk.html
+++ b/www/partials/managepatient/risk.html
@@ -3,8 +3,8 @@
 
 <ion-header-bar>
   <div class="h1 title">风险评估</div>    
-  <button class="button button-icon ion-minus-circled" ng-click="data.showDelete = !data.showDelete; showReorder = false;">
-  </button>
+<!--   <button class="button button-icon ion-minus-circled" ng-click="data.showDelete = !data.showDelete; showReorder = false;">
+  </button> -->
   <button class="button button-icon ion-help-circled" ng-click="onClickEvaluation1()">
     新增
   </button>
