--- a/www/partials/managepatient/clinic.html
+++ b/www/partials/managepatient/clinic.html
@@ -2,7 +2,7 @@
 <ion-content class="padding">
 <div class="row">
 	<div class="col">
-		<div class="item item-select"> 
+		<div class="item item-select" style="height:52px"> 
 			<select>
 				<option selected>海军总医院</option>
 			</select>
@@ -12,7 +12,7 @@
 		<div class="item item-input-inset">
 			<p>就诊ID</p>
 			<label class="item-input-wrapper">
-				<input type="text" ng-model="SyncInfo.userid">
+				<input type="text" ng-model="HJZYYID">
 			</label>
 			
 		</div>
