LS存入医生照片 key 为 doctorphoto 我 页面里加了一个按键 跳转到 uplaod Signed-off-by: lrzlr2020 <lrzlr2014@gmail.com>

--- a/www/partials/individual/coach-home.html
+++ b/www/partials/individual/coach-home.html
@@ -17,7 +17,11 @@
   </ion-nav-bar>
 
 <ion-content>
-
+  <div class="padding">
+    <button class="button button-block button-primary" ng-click="onClickCheck()" ng-hide="state ==  '已激活'">
+      进入审核页面 {{state}}
+    </button>
+  </div>
   <div class="list card">
 
     
