--- a/www/partials/individual/coach-idupload.html
+++ b/www/partials/individual/coach-idupload.html
@@ -100,14 +100,16 @@
     </label>
 </ion-list>
 
-<!-- <img ng-src="{{lastPhoto}}" style="max-width: 100%"> -->
-<div class="card" height=100; width =100>
+<!-- <div class="item item-avatar"> -->
+<!-- <div class="card" height=100; width =100> -->
 
   <div style ="height=100; width =100; display:block; text-align:center;">
     <img ng-show = "imgURI != undefined"  ng-click="onClickCamera($event)" ng-src="{{imgURI}}"  >
     <img ng-show = "imgURI == undefined" ng-click="onClickCamera($event)" ng-src='http://placehold.it/300/CCE8D6?text="点击此处拍照"' width = 100 height =100>
   </div>
-</div>
+<!-- </div> -->
+
+
 <!--  {{"http://placehold.it/300?text=placehold.it+fuck!"}}
  --><!--   <ion-list>
     <div class="list list-inset">
