改了头像，自动登录

--- a/www/partials/individual/coach-home.html
+++ b/www/partials/individual/coach-home.html
@@ -6,13 +6,13 @@
     <button class="button button-clear button-dark button-icon icon ion-plus-round">添加</button>
   </ion-header-bar> -->
 
-  <ion-nav-bar class="bar-balanced nav-title-slide-ios7">
+  <ion-nav-bar class="bar-positive nav-title-slide-ios7">
 
     <ion-nav-buttons side="left">
       <button class="button button-icon icon ion-qr-scanner " ng-click="QRscan()">扫一扫</button>
     </ion-nav-buttons>
     <ion-nav-buttons side="right">
-      <button class="button button-clear button-dark button-icon icon ion-plus-round" ng-click="addpatient()">添加新患者</button>
+      <button class="button   button-icon icon ion-plus-round" ng-click="addpatient()">新患者</button>
     </ion-nav-buttons>
   </ion-nav-bar>
 
