--- a/www/partials/individual/coach-patients.html
+++ b/www/partials/individual/coach-patients.html
@@ -1,5 +1,5 @@
 <ion-view view-title="现有病人">
-  <ion-nav-bar class="bar-balanced nav-title-slide-ios7">
+  <ion-nav-bar class="bar-positive nav-title-slide-ios7">
     <ion-nav-buttons side="left">
       <button class="button button-icon icon ion-navicon " ng-click="doSomething()"></button>
     </ion-nav-buttons>
