--- a/www/partials/individual/coach-personalinfo.html
+++ b/www/partials/individual/coach-personalinfo.html
@@ -1,5 +1,5 @@
 <ion-view view-title="个人信息" hide-nav-bar="true">
-  <ion-header-bar>
+  <ion-header-bar class="bar-positive">
     <button class="button button-icon icon ion-arrow-left-a" ng-click="onClickBackward()">返回</button>
     <div class="h1 title">个人信息</div>
 
