--- a/www/partials/login/signin.html
+++ b/www/partials/login/signin.html
@@ -1,4 +1,4 @@
-<ion-view title="登录">
+<ion-view title="慢病管理系统">
   <ion-nav-bar class="bar-dark nav-title-slide-ios7" style="" >
      
   </ion-nav-bar>
