--- a/www/partials/individual/coach-config.html
+++ b/www/partials/individual/coach-config.html
@@ -6,7 +6,7 @@
 	  <div class="h1 title">设置</div>
 	</ion-header-bar> -->
 
-	<ion-nav-bar class="bar-balanced nav-title-slide-ios7">
+	<ion-nav-bar class="bar-positive nav-title-slide-ios7">
       <ion-nav-buttons side="left">
         <button class="button button-icon icon ion-arrow-left-a " ng-click="onClickBackward()"></button>
       </ion-nav-buttons>
