--- a/www/partials/individual/coach-newpatients.html
+++ b/www/partials/individual/coach-newpatients.html
@@ -1,5 +1,5 @@
 <ion-view title="新患者">
-  <ion-header-bar class="bar-balanced">
+  <ion-header-bar class="bar-positive">
     <h2 class="title">Patient List</h2>
     <button class ="button button-icon ion-minus-circled" ng-click ="data.showDelete = !data.showDelete; showReorder = false;"></button>
     <button class ="button button-icon ion-navicon" ng-click ="data.showReorder = !data.showReorder; showDelete = false;"></button>
@@ -29,7 +29,7 @@
     <ion-refresher on-refresh="doRefresh()"></ion-refresher>
     <ion-list>
       <ion-item style="padding:0" ng-repeat="patient in patients track by $index" class="item-thumbnail-left "  >
-        <img ng-src="img/male.png">
+        <img src="{{patient.photoAddress}}">
         <div Style="padding-top:10px">
             <div class="item-row ">
               <div class="col-50"><h3><!--<i class="icon ion-chevron-right"></i>-->  {{patient.UserName}} </h3></div>
