样式小调整

--- a/www/partials/individual/coach-patients.html
+++ b/www/partials/individual/coach-patients.html
@@ -75,7 +75,7 @@
                     <div class="row"><b>依从率</b></div>
                     <div class="row"><h3>{{patient.Age}}%</h3></div>
                   </div>
-                  <i ng-hide="!ishide(patient)" style="font-size:2em;color:#c55e19" class="icon ion-sad"></i>
+                  <i ng-hide="!ishide(patient)" style="font-size:2em;color:#fb6a1b" class="icon ion-sad"></i>
                   <i ng-hide="ishide(patient)" style="font-size:2em;color:#33cd5f" class="icon ion-happy"></i>
                 </div>
               </div>  
@@ -83,7 +83,7 @@
             <div class="row">
         
           <b style="padding:0 10px 0 5px"><i class="icon ion-arrow-graph-up-right"></i> 计划进度</b>
-          <div style="background-color:#FEDACC; border:#DDDDDD 1px solid;width:100%">
+          <div style="background-color:#f9efe8; border:#DDDDDD 1px solid;width:100%">
           <div ng-style="setwidth(patient)" class="processbar"><p style="color:#FFFFFF;text-align:right">{{patient.Age}}%</p></div>
           </div>
         
