--- a/www/partials/individual/coach-newpatients.html
+++ b/www/partials/individual/coach-newpatients.html
@@ -43,7 +43,7 @@
               <div class="col-50"><p>2015-10-27</p></div>
             </div>
         </div>
-        <ion-option-button class="button-assertive"ng-click="onItemDelete(index)">
+        <ion-option-button class="button-assertive"ng-click="onItemDelete($index)">
           <i class="icon ion-close-circled"></i>
         </ion-option-button>
       </ion-item>
