--- a/www/partials/managepatient/chat-detail.html
+++ b/www/partials/managepatient/chat-detail.html
@@ -1,7 +1,9 @@
 <ion-view view-title="{{PatientName}}" id = "userMessagesView">    
     <ion-content class="padding" start-y="120">
-        <div ng-repeat="item in Dialog">
-            <my-smsdrt time="{{item.SendDateTime}}" content="{{item.Content}}" type="{{item.IDFlag}}" face="{{item.IDFlag === 'Send' && myImage || imageURL}}"></my-smsdrt> 
+        <ion-refresher pulling-text="下拉加载更多。。。" spinner='ripple' refreshing-text="努力加载中" on-refresh="DisplayMore()">
+        </ion-refresher>
+        <div ng-repeat="item in Dialog.DisplayOnes">
+            <my-smsdrt time="{{item.Time}}" content="{{item.Content}}" type="{{item.IDFlag}}" face="{{item.IDFlag === 'Send' && myImage || imageURL}}"></my-smsdrt> 
         </div>
         <br><br>      
     </ion-content>     
