Signed-off-by: SimonTDY <584530365@qq.com>

--- a/www/partials/addpatient/basicinfo.html
+++ b/www/partials/addpatient/basicinfo.html
@@ -218,9 +218,9 @@
 	<div class='row responsive-sm'>
 		<div class='col col-20'></div>
 		<div class='col col-20'></div>
-		<div class='col col-10'><button class="button  button-block icon-left ion-checkmark button-stable"
+		<div class='col col-10'><button class="button  button-block icon-left  button-stable"
 			 ng-click="save()">保存</button></div>
-		<div class='col col-10'><button class="button  button-block icon-left ion-checkmark button-stable"
+		<div class='col col-10'><button class="button  button-block icon-left  button-stable"
 			ng-click="reset()">重置</button></div>
 		
 		
