--- a/www/partials/managepatient/tablelist.html
+++ b/www/partials/managepatient/tablelist.html
@@ -114,7 +114,7 @@
   <div class="col"><b>值</b></div>
   <div class="col"><b>单位</b></div>
 </div>
-
+<div ng-if=displaytable style="text-align:center"><b>期间无体征数据</b></div>
 <ion-list  ng-repeat='item in allsigns |orderBy : "-RecordDate" track by $index'>
 
   
