--- a/www/partials/addpatient/plan/create.html
+++ b/www/partials/addpatient/plan/create.html
@@ -17,7 +17,7 @@
 	        </a>
     	</div>
     	<div style="text-align:center;padding:20px;">
-			<button class="button button-outline button-positive" style="width:60px;height:30px;" ng-click="$onClickBackward()">
+			<button class="button button-outline button-positive" style="width:60px;height:30px;" ng-click="backtomain()">
 			<span style="font-size:15px;color:blue;font-weight:bold">确定</span>
 			</button>
 		</div>
