--- a/www/partials/managepatient/main.html
+++ b/www/partials/managepatient/main.html
@@ -10,14 +10,9 @@
 </div>
 </ion-header-bar>
 <ion-header-bar class="bar-subheader bar-stable">
-    <div class="row">
-      <div class="col col-80">
-        <h2>{{Name}}      {{gender}}        {{age}}岁</h2>
-      </div>
-      <div class="col">
-        <button class="button icon-right" ng-click="backtocoach()">返回主页</button>
-      </div>
-    </div>
+        <h2>{{Name}}      {{gender}}        {{age}}岁<button class="button icon-right" ng-click="backtocoach()">返回主页</button></h2>
+
+        
 </ion-header-bar>
 
 
