--- a/www/partials/managepatient/plan.html
+++ b/www/partials/managepatient/plan.html
@@ -35,7 +35,7 @@
 
 
 </div>
-<div ng-if=diaplaysm><b>暂无数据</b></div>
+<div ng-if=diaplaysm style="text-align:center"><b>暂无数据</b></div>
 <div id='chartdiv3'></div>
 
 <div style="text-align:center;margin-top:20px;">    
